--- a/data/glade/gui.glade
+++ b/data/glade/gui.glade
@@ -5,8 +5,8 @@
   <widget class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
-    <signal name="destroy_event" handler="on_destroy_event" />
-    <signal name="delete_event" handler="on_delete_event" />
+    <signal name="destroy_event" handler="on_destroy_event" swapped="no"/>
+    <signal name="delete_event" handler="on_delete_event" swapped="no"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -47,7 +47,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_newdist_btn_clicked" />
+                                    <signal name="clicked" handler="on_newdist_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox6">
                                         <property name="visible">True</property>
@@ -91,7 +91,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_start_btn_clicked" />
+                                    <signal name="clicked" handler="on_start_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox4">
                                         <property name="visible">True</property>
@@ -135,7 +135,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_removedist_btn_clicked" />
+                                    <signal name="clicked" handler="on_removedist_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox7">
                                         <property name="visible">True</property>
@@ -179,7 +179,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_export_btn_clicked" />
+                                    <signal name="clicked" handler="on_export_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox9">
                                         <property name="visible">True</property>
@@ -223,7 +223,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_vbox_btn_clicked" />
+                                    <signal name="clicked" handler="on_vbox_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox5">
                                         <property name="visible">True</property>
@@ -268,7 +268,7 @@
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
                                     <property name="xalign">0.079999998211860657</property>
-                                    <signal name="clicked" handler="on_bootcd_btn_clicked" />
+                                    <signal name="clicked" handler="on_bootcd_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="btn">
                                         <property name="visible">True</property>
@@ -313,7 +313,7 @@
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
                                     <property name="xalign">0.079999998211860657</property>
-                                    <signal name="clicked" handler="on_clone_btn_clicked" />
+                                    <signal name="clicked" handler="on_clone_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="btn1">
                                         <property name="visible">True</property>
@@ -357,7 +357,7 @@
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
                                     <property name="use_action_appearance">False</property>
-                                    <signal name="clicked" handler="on_options_btn_clicked" />
+                                    <signal name="clicked" handler="on_options_btn_clicked" swapped="no"/>
                                     <child>
                                       <widget class="GtkVBox" id="vbox11">
                                         <property name="visible">True</property>
@@ -393,6 +393,50 @@
                                     <property name="expand">False</property>
                                     <property name="fill">True</property>
                                     <property name="position">7</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkButton" id="multiboot_btn">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="use_action_appearance">False</property>
+                                    <signal name="clicked" handler="on_multiboot_btn_clicked" swapped="no"/>
+                                    <child>
+                                      <widget class="GtkVBox" id="vbox12">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">False</property>
+                                        <child>
+                                          <widget class="GtkImage" id="multiboot_img">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <property name="stock">gtk-execute</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">True</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkLabel" id="label10">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <property name="label" translatable="yes">MultiBoot</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="expand">True</property>
+                                            <property name="fill">True</property>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </widget>
+                                    </child>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                    <property name="position">8</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -548,17 +592,53 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkVBox" id="vt_container">
-                    <property name="height_request">200</property>
+                  <widget class="GtkHBox" id="hbox7">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <placeholder/>
+                      <widget class="GtkVBox" id="vt_container">
+                        <property name="height_request">200</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkHBox" id="multiboot_container">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <child>
+                          <widget class="GtkDrawingArea" id="mboot_drawing">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                   </widget>
                   <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
+                    <property name="resize">False</property>
+                    <property name="shrink">False</property>
                   </packing>
                 </child>
               </widget>
@@ -693,7 +773,7 @@
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_stock">True</property>
-                            <signal name="clicked" handler="on_del_plug_btn_clicked" />
+                            <signal name="clicked" handler="on_del_plug_btn_clicked" swapped="no"/>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -710,7 +790,7 @@
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_stock">True</property>
-                            <signal name="clicked" handler="on_refresh_plug_btn_clicked" />
+                            <signal name="clicked" handler="on_refresh_plug_btn_clicked" swapped="no"/>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -727,7 +807,7 @@
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_stock">True</property>
-                            <signal name="clicked" handler="on_edit_plug_btn_clicked" />
+                            <signal name="clicked" handler="on_edit_plug_btn_clicked" swapped="no"/>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -744,7 +824,7 @@
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_stock">True</property>
-                            <signal name="clicked" handler="on_new_plug_btn_clicked" />
+                            <signal name="clicked" handler="on_new_plug_btn_clicked" swapped="no"/>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
